--- a/.settings/org.eclipse.wst.common.component
+++ b/.settings/org.eclipse.wst.common.component
@@ -3,6 +3,7 @@
         <wb-resource deploy-path="/" source-path="/WebContent" tag="defaultRootSource"/>
         <wb-resource deploy-path="/WEB-INF/classes" source-path="/src"/>
         <wb-resource deploy-path="/WEB-INF/classes" source-path="/HebPF"/>
+        <wb-resource deploy-path="/WEB-INF/classes" source-path="/spring"/>
         <property name="context-root" value="workLog"/>
         <property name="java-output-path" value="/workLog/build/classes"/>
     </wb-module>
